Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-75

When run in yarn mode, the server will crash in schedHost function

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 2.0.0.0-incubating
    • libyarn
    • None

    Description

      under the yarn mode, stop yarn, run sql like "Insert into testyarn values(1);" cancel this sql , it will core dumped.
      the stack messages of core the are as below:
      #11 0x00007f0ef40efc01 in newLibYarnClient (user=<value optimized out>, rmHost=0x7f0ed0eede50 "test1",
      rmPort=0x7f0ed0eedda8 "9980", schedHost=0xffffffffffffffff <Address 0xffffffffffffffff out of bounds>,
      schedPort=0xa <Address 0xa out of bounds>, amHost=0x7f0eeedfb8c0 "\300\270\337\356\016\177", amPort=0,
      am_tracking_url=0xe59594 "url", client=0x1253940, heartbeatInterval=5000)
      at /data1/pulse2-agent/agents/agent1/work/LIBYARN-main-opt/rhel5_x86_64/src/libyarnclient/LibYarnClientC.cpp:127
      rmPortStr = {static npos = 18446744073709551615,
      _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> =

      {<No data fields>}, <No data fields>}, _M_p = 0x0}}
      schedHostStr = {static npos = 18446744073709551615,
      _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> = {<No data fields>}

      , <No data fields>}, _M_p = 0x2c7 <Address 0x2c7 out of bounds>}}
      amHostStr = {static npos = 18446744073709551615,
      _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> =

      {<No data fields>}, <No data fields>}, _M_p = 0x0}}
      userStr = {static npos = 18446744073709551615,
      _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> = {<No data fields>}

      , <No data fields>}, _M_p = 0x7fff413d01b0 ""}}
      rmHostStr = {static npos = 18446744073709551615,
      _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> =

      {<No data fields>}, <No data fields>}, _M_p = 0x7fff413d0160 ""}}
      schedPortStr = {static npos = 18446744073709551615,
      _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> = {<No data fields>}

      , <No data fields>}, _M_p = 0xb83320 "ResBrokerMainInternal"}}
      amTrackingUrlStr = {static npos = 18446744073709551615,
      _M_dataplus = {<std::allocator<char>> = {<__gnu_cxx::new_allocator<char>> =

      {<No data fields>}

      , <No data fields>}, _M_p = 0x0}}

      Attachments

        Activity

          People

            wlin Wen Lin
            abai Amy Bai
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: