HAWQ-75. fix coredump when hawq reconnect libyarn.